--- a/plugin.xml
+++ b/plugin.xml
@@ -49,6 +49,9 @@
                 <param name="android-package" value="com.crypho.plugins.SecureStorage"/>
             </feature>
         </config-file>
+        <config-file target="AndroidManifest.xml" parent="/*">
+            <uses-permission android:name="android.permission.USE_BIOMETRIC" />
+        </config-file>
 
         <source-file src="src/android/SecureStorage.java" target-dir="src/com/crypho/plugins/" />
         <source-file src="src/android/RSA.java" target-dir="src/com/crypho/plugins/" />
